--- a/spotify-master/css/style.css
+++ b/spotify-master/css/style.css
@@ -4,7 +4,7 @@
 }
 .main{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 .main-top{
     width: 100%;
@@ -61,13 +61,18 @@
     padding: 10px 20px;
     font-weight: 400;
 }
-.main-bottom {
-    height: 100%;
+.main-hero {
+    height: 92%;
+    min-height: 850px;
     width: 100%;
     background-color: #2D46B9;
-    position: relative;
 }
-.main-bottom::before {
+.main-hero-showcase {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+.main-hero-showcase::before {
     content: "";
     position: absolute;
     top: 0;
@@ -75,23 +80,22 @@
     width: 100%;
     height: 100%;
     background-image: url(https://www.scdn.co/i/home/lieVariants/bursts.svg);
-    background-position: 41% 4%;
+    background-position: 46% 4%;
     background-repeat: no-repeat;
     background-size: 170%;
 }
-.bottom-showcase {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: 170px;
-    height: 70vh;
+.container {
+    height: 100%;
+    max-width: 1200px;
+    margin:  0 auto;
 }
 .showcase-text {
-    height: 480px;
-    width: 1200px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    height: 100%;
+    width: 100%;
 }
     .showcase-text h4 {
         margin: 20px;
@@ -105,7 +109,6 @@
     font-weight: 700;
     /* font-size: 48px; */
     color: #1ED760;
-    align-self: flex-start;
     letter-spacing: -0.04em;
 }
 .one-bit {
@@ -128,9 +131,9 @@
     }
 .main-footer {
     background: black;
-    width: 100vw;
+    width: 100%;
     padding-top: 75px;
-    min-width: 250px;
+    min-width: 300px;
 }
 .footer-container {
     /* Line settings */
@@ -145,10 +148,11 @@
     justify-content: space-between;
 }
 .footer-contents-2 {
-    width: 100%;
     display: flex;
-    height: 10%;
-    justify-content: space-between;
+    flex-direction: column;
+    height: 50px;
+    font-size: 12px;
+    width: 100%;
 }
 .footer-logo {
     padding: 0;
@@ -187,20 +191,27 @@ flex: 1;
     display: flex;
     justify-content: flex-end;
 }
+    .sm-list {
+        display: flex;
+    }
     .sm-icon {
-        height: 50px;
-        width: 50px;
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #222326;
+        height: 54px;
+        width: 54px;
+        border-radius: 50%;
+        margin-right: 15px;
         color: #fff;
     }
-
-.footer-contents-2 {
-    display: flex;
-    flex-direction: column;
-    height: 50px;
-    font-size: 12px;
-}
+    .fab {
+        font-size: 24px;
+    }
 .country {
     background: #000000;
+    width: 100%;
     flex: 1;
     display: flex;
     justify-content: flex-end;
@@ -210,34 +221,33 @@ flex: 1;
     .country a{
         color: #919496;
     }
-    
 
     .flag {
         height: 18px;
-        margin-left: 10px;
+        margin: 0 25px 0 10px;
     }
 .bottom-links {
-    background: chocolate;
     flex: 2;
+    color: #919496;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
     .bottom-links a {
         color: #919496;
     }
 .bottom-menu {
     display: flex;
-    width: 100%;
-}
-.bottom-menu li:last-child {
-    align-self: flex-end;
-    color: #000;
 }
 .bottom-item {
     margin: 10px 15px;
 }
-
+.bottom-copy {
+    margin-right: 25px;
+}
 
 @media (max-width: 1300px) {
-    .main-bottom::before {
+    .main-hero-showcase::before {
         background-image: url(https://www.scdn.co/i/home/lieVariants/bursts-tablet.svg);
         background-size: 153%;
         background-position: right 40% center;
@@ -254,9 +264,8 @@ flex: 1;
     }
 }
 @media (max-width: 768px) {
-    .bottom-showcase {
+    .main-hero-showcase {
         width: 100%;
-        top: 255px;
     }
     .showcase-text {
         width: 100%;
@@ -269,5 +278,10 @@ flex: 1;
     }
     .one-bit {
         display: inline;
+    }
+}
+@media (max-width: 534px) {
+    .one-bit {
+        display: block;
     }
 }
